fix(projects): double scrollbar

--- a/projects/Find Roommate Platform/style2.css
+++ b/projects/Find Roommate Platform/style2.css
@@ -15,7 +15,6 @@
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
